tests/snapshots/integration__can_merge_configs.snap
---
source: tests/tests.rs
expression: all
---

---decor.toml---
preprocessors.ts = { pipeline = ["echo x"], target = "js" }
---input.decor---
---scss
p {
  color: red;
  span {
    color: green;
  }
}
---

---ts
let x = 0;
---

#p {x}! #span:span! /p

---out.css---
p.decor-0 {
  color: red;
}
p.decor-0 span.decor-0 {
  color: green;
}

---out.html---
<p class="decor-0"><span id="1"></span>! <span class="decor-0">span! </span></p>

---out.js---
const elems = {"1":replace(document.getElementById("1")),};
function replace(node) {
  const text = document.createTextNode("");
  node.replaceWith(text);
  return text;
}
function __init_ctx() {
  x
  return [];
}
const ctx = __init_ctx();
function __update(dirty, initial) {
  if (initial) elems[1].data = x;
}
__update(null, true);

