tests/snapshots/integration__dom_render_is_default_when_modularizing.snap
---
source: tests/tests.rs
expression: all
---

---input.decor---
---js
let counter = 0;
---

#p The counter is: {counter} /p
#button[@click={() => counter += 1}]:Click me!

---out.mjs---
function __init_ctx() {
let counter = 0;
let __closure1 = () => __schedule_update(0, counter += 1);
return [counter,__closure1];
}
export default function initialize(target) {
const dirty = new Uint8Array(new ArrayBuffer(1));
function create_main_block(target, anchor) {
function mount(target, newNode, anchor) {
target.insertBefore(newNode, anchor || null);
}
const e0 = document.createTextNode("\n\n");
const e1 = document.createElement("p");
const e2 = document.createTextNode("The counter is: ");
const e3 = document.createTextNode(ctx[0]);
const e4 = document.createTextNode(" ");
const e5 = document.createElement("button");
e5.textContent = "Click me!";
e5.addEventListener("click", ctx[1])
mount(target, e0, anchor);
e1.appendChild(e2);
e1.appendChild(e3);
mount(target, e1, anchor);
mount(target, e4, anchor);
mount(target, e5, anchor);
return {
u(dirty) {
if (dirty[0] & 1) e3.data = ctx[0];
},
d() {
e0.parentNode.removeChild(e0);
e1.parentNode.removeChild(e1);
e4.parentNode.removeChild(e4);
e5.parentNode.removeChild(e5);
}
};
}
const ctx = __init_ctx();
const fragment = create_main_block(target);
let updating = false;
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
fragment.u(dirty);
updating = false;
dirty.fill(0);
});
}
}

