tests/snapshots/integration__zig_files_are_properly_compiled_and_instantiated.snap
---
source: tests/tests.rs
expression: all
---

---index.html---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
  </head>
  <body>
    <script type="module" src="out.js"></script>
    <div id="input"></div>
  </body>
</html>

---input.decor---
---zig
export fn add(a: i32, b: i32) i32 {
    return a + b;
}
---

---js
console.log(wasm.add(1, 2));
---

---__tmp.wasm---
COULD NOT BE READ: stream did not contain valid UTF-8

---out.js---
let wasm = (await WebAssembly.instantiateStreaming(fetch("./out/__tmp.wasm"))).instance.exports;
function replace(node) {
  const text = document.createTextNode("");
  node.replaceWith(text);
  return text;
}
const elems = {};
function __init_ctx() {
  console.log(wasm.add(1, 2));
  return [];
}
const ctx = __init_ctx();
__update(null, true);
function __update(dirty, initial) {
}

